Added tap dance for oops. Switched space, tab, escape, and enter.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,8 @@
     },
     "git.detectSubmodules": false,
     "cSpell.words": [
-        "karabiner"
+        "karabiner",
+        "oopsy"
     ],
     "cmake.configureOnOpen": false,
 }
