Use Grave-OS for OSMR mods. Fix cancel quick caps in custom macros.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,8 @@
     "git.detectSubmodules": false,
     "cSpell.words": [
         "karabiner",
-        "oopsy"
+        "oopsy",
+        "oshr"
     ],
     "cmake.configureOnOpen": false,
 }
